2005-07-16  Aaron Stone <aaron@serendipity.cx>

	* db.c: added DBPFX prefixes instead of dbmail_ in several places.
	* config.c: fixed faulty code for user-specified DBPFX value.

2005-07-14  Aaron Stone <aaron@serendipity.cx>

	* db.c: added the new tables into the DB_TABLENAMES field (closes #229).

2005-07-12  Aaron Stone <aaron@serendipity.cx>

	* pgsql/dbpgsql.c (db_query): clear the result set in the failure case
	(closes: #227).
	* lmtp.c (lmtp, LMTP_DATA): be sure to free the string returned from
	dbmail_message_to_string in a trace call, and free the message at the
	end of delivery as well as the failure case (closes: #227).

2005-06-23  Paul Stevens <paul@nfg.nl>

	* dbmail-message.c: escape strings during insertion (closes: #222).

2005-06-21  Paul Stevens <paul@nfg.nl>

	* db.c, pgsql/dbpgsql.c, server.c, mysql/dbmysql.c: minor cleanups. 
	
2005-06-20  Paul Stevens <paul@nfg.nl>

	* Makefile.am, dm_cidr.c, dm_cidr.h, misc.c, check_dbmail_server.c: support
	cidr notation in usermap sock_allow/sock_deny fields.
	* mime.c: minor cleanups.
	* misc.h, db.c, dm_cidr.c, check_dbmail_server.c, misc.c: use best match 
	on sock_allow in db_usermap_resolve.
	
2005-06-17  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, pgsql/dbpgsql.c, sql/postgresql/add_replycache.pgsql,
	sql/mysql/add_replycache.mysql, sqlite/dbsqlite.c, pipe.c,
	mysql/dbmysql.c: cleaned up the auto-reply code so we behave like a
	good net citizen.
	
2005-06-16  Paul Stevens <paul@nfg.nl>

	* auth/authsql.c, auth/authldap.c (auth_check_user_ext): added loop
	detection.
	* dsn.c, dbmail-user.c: start auth_check_user_ext with check at zero
	instead of minus one.
	* mime.c (mail_address_build_list): cleanup using gmime.

2005-06-14  Paul Stevens <paul@nfg.nl>

	* dbmail-user.c, db.c, list.c, auth/authldap.c, dbmail-imapsession.c,
	misc.c: added check when looping over GLists to avoid memory leakage.
	* dbmail-message.c, dbmail-message.h: added header caching of to, cc, 
	from and replyto fields.
