@@ -59,4 +59,5 @@ typedef struct {
 int CreateSocket(serverConfig_t * conf);
 int StartServer(serverConfig_t * conf);
 int StartCliServer(serverConfig_t * conf);
+void ClearConfig(serverConfig_t * conf);
 #endif
